--- a/.github/workflows/main_bankingdashboard.yml
+++ b/.github/workflows/main_bankingdashboard.yml
@@ -75,4 +75,4 @@ jobs:
         with:
           app-name: 'BankingDashboard'
           slot-name: 'Production'
-          
+        timeout-minutes: 600
